update number util

--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4-1/int05-4-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int05/int05-4/int05-4-1/int05-4-1.component.html
@@ -21,8 +21,7 @@
                         <div class="ui calendar" id="calendar">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="calendar" autocomplete="off" id="calendar_data" name="calendar_data" placeholder="ปปปป" autocomplete="off" ngModel
-                                    readonly>
+                                <input type="calendar" autocomplete="off" id="calendar_data" name="calendar_data" placeholder="ปปปป" autocomplete="off" ngModel readonly>
                             </div>
                         </div>
                     </div>
@@ -79,7 +78,7 @@
                     </div>
 
                     <div class="four wide field ">
-                        <input type="number" name="budget" id="budget" [(ngModel)]="budget">
+                        <input type="text" name="budget" id="budget" (keypress)="onlyNumber($event)" [(ngModel)]="budget">
                     </div>
 
                     <div class="three wide field">
@@ -108,8 +107,7 @@
                         <div class="ui calendar" id="operationstartCal">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="calendar" autocomplete="off" name="operationstart" id="operationstart" placeholder="วว/ดด/ปปปป" autocomplete="off"
-                                    ngModel readonly>
+                                <input type="calendar" autocomplete="off" name="operationstart" id="operationstart" placeholder="วว/ดด/ปปปป" autocomplete="off" ngModel readonly>
                             </div>
                         </div>
                     </div>
@@ -122,8 +120,7 @@
                         <div class="ui calendar" id="operationendCal">
                             <div class="ui input left icon">
                                 <i class="calendar alter nate outline icon"></i>
-                                <input type="calendar" autocomplete="off" name="operationend" id="operationend" placeholder="วว/ดด/ปปปป" autocomplete="off"
-                                    ngModel readonly>
+                                <input type="calendar" autocomplete="off" name="operationend" id="operationend" placeholder="วว/ดด/ปปปป" autocomplete="off" ngModel readonly>
                             </div>
                         </div>
                     </div>
@@ -138,9 +135,9 @@
                         <table id="table1" class="ui small celled table striped selectable" style="width: 100%;">
                             <thead>
                                 <tr style="text-align: center;">
-                                    <th rowspan="2">รายการจัดซื้อจัดจ้าง <span style = "color: red">*</span></th>
+                                    <th rowspan="2">รายการจัดซื้อจัดจ้าง <span style="color: red">*</span></th>
                                     <th rowspan="2">จำนวน</th>
-                                    <th rowspan="2">หน่วยนับ <span style = "color: red">*</span></th>
+                                    <th rowspan="2">หน่วยนับ <span style="color: red">*</span></th>
                                     <th rowspan="2">ราคาที่ตั้งไว้ต่อหน่วย</th>
                                     <th rowspan="2">ราคากลางต่อหน่วย</th>
                                     <th rowspan="2">ราคาซื้อ/จ้าง/เช่า ต่อหน่วย</th>
@@ -273,7 +270,7 @@
                 </div>
 
                 <div class="five wide field ">
-                    <input type="number" name="tenderResults" [(ngModel)]="tenderResults">
+                    <input type="text" name="tenderResults" (keypress)="onlyNumber($event)" [(ngModel)]="tenderResults">
                 </div>
 
                 <div class="two wide field">
