--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6-1/ope04-6-1.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-6/ope04-6-1/ope04-6-1.component.html
@@ -31,7 +31,7 @@
 
       </table>
       <div class="ui stackable center aligned page grid">
-        <button class="mini button ui"><i class="reply icon" type="button" (click)="back()"></i>กลับ</button>
+        <button class="mini button ui" type="button" (click)="back()"><i class="reply icon"></i>กลับ</button>
       </div>
       <br>
     </div>
