edit messege datatable

--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/operate-tax-audit/ope04/ope04-8/ope04-8.component.html
@@ -4,7 +4,7 @@
     <h2 class="ui header">กระดาษทำการตรวจสอบด้านราคา</h2>
 
     <div class="ui top attached header segment" style="background: #1e83db;color: white">
-      <span>Criteria</span>
+      <span>เงื่อนไขการค้นหา</span>
     </div>
 
     <div class="ui attached segment {{loading ? 'loading' : ''}}">
