--- a/workspace/ims-client/src/app/buckwaframework/project/management-control/mgcontrol/mgcontrol.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/management-control/mgcontrol/mgcontrol.component.html
@@ -1,3 +1,5 @@
+<app-breadcrumb [route]="breadcrumb"></app-breadcrumb>
+
 <div class="ui grid">
   <div class="row">
     <div class="sixteen wide column">
