edit jasper report

--- a/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/get-app-roved/get-app-roved.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/reports/tax-audit-reporting/get-app-roved/get-app-roved.component.html
@@ -52,7 +52,7 @@
               <input type="text" id="travelToWork" name="travelToWork" [(ngModel)]="obj.travelToWork">
             </div>
             <div class="oue wide field">
-              <label>บาท</label>
+              <label>ราย</label>
             </div>
           </div>
 
